--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,15 +14,13 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - name: Deploy to server
-      uses: appleboy/ssh-action@master
-      with:
-        username: ans
-        host: 68.183.88.222
-        key: ${{ secrets.SSH_PASSWORD }}
-        password: masterkey
-        script: |
-         cd /var/www/gymie
-         git pull origin main
-         git status
+      uses: easingthemes/ssh-deploy@v2.1.4
+      env:
+          SSH_PRIVATE_KEY: ${{ secrets.DEPLOY_KEY }}
+          REMOTE_HOST: 68.183.88.222
+          REMOTE_USER: git
+          REMOTE_PORT: 22
+          TARGET: "/var/www/gymie"
+          
 
        
